# ChangeLog for dev-java/diablo-jdk
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/diablo-jdk/ChangeLog,v 1.10 2010/03/11 10:42:38 aballier Exp $

  11 Mar 2010; Alexis Ballier <aballier@gentoo.org>
  -diablo-jdk-1.5.0.07.01.ebuild, -files/diablo-jdk-1.5.env:
  remove old

  15 Oct 2008; Alexis Ballier <aballier@gentoo.org>
  files/diablo-jdk-1.5.env:
  Fix 1.5 env file to state Diablo and not Sun JDK

*diablo-jdk-1.6.0.07.02 (15 Oct 2008)

  15 Oct 2008; Alexis Ballier <aballier@gentoo.org>
  +files/diablo-jdk-1.6.env, +diablo-jdk-1.6.0.07.02.ebuild:
  Bump to JDK 1.6. Bug #232310

  22 Jul 2007; Hans de Graaff <graaff@gentoo.org>
  diablo-jdk-1.5.0.07.01.ebuild:
  Drop virtual/x11 references.

  05 Jan 2007; Vlastimil Babka <caster@gentoo.org>
  diablo-jdk-1.5.0.07.01.ebuild:
  Convert einfo to elog.

  03 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
  diablo-jdk-1.5.0.07.01.ebuild:
  Remove the double restrict.

  03 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
  -diablo-jdk-1.5.0.07.00.ebuild, diablo-jdk-1.5.0.07.01.ebuild:
  Use QA_TEXTREL for the known textrels, remove old version.

*diablo-jdk-1.5.0.07.01 (10 Oct 2006)

  10 Oct 2006; Timothy Redaelli <drizzt@gentoo.org>
  +files/diablo-jdk-1.5.env, -files/diablo-jdk.env,
  +diablo-jdk-1.5.0.07.01.ebuild:
  Updated to new release and removed obsolete env file

  12 Sep 2006; Diego Pettenò <flameeyes@gentoo.org>
  diablo-jdk-1.5.0.07.00.ebuild:
  Move slot to 1.5.

*diablo-jdk-1.5.0.07.00 (22 Jul 2006)

  22 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> +files/diablo-jdk.env,
  +metadata.xml, +diablo-jdk-1.5.0.07.00.ebuild:
  Initial import, ebuild from Timothy Redaelli in bug #141380.
