@@ -1,7 +1,4 @@
-AUX diablo-jdk-1.5.env 1012 RMD160 fd42159dfd0de6fbdfb64a3b1e62bae5a5d1524d SHA1 0618163782eaf65e776ab68bd79610587301c441 SHA256 6ca339d1dd9e70a5508ae88d2659aa25ae6b3b7a3c067193a1ca1a936b1ed984
-DIST diablo-caffe-freebsd6-i386-1.5.0_07-b01.tar.bz2 54347274 RMD160 b49c88ebd63b23a0e322f7a5809a303d0aa487fc SHA1 1a5bf35b745880a0326b9dca370d72fd95fae5a6 SHA256 b7e010658271bebadaa9ea1f410d7af27fcbc0f864a69feea5cd60c6683aa4c9
 DIST diablo-caffe-freebsd7-i386-1.6.0_07-b02.tar.bz2 64093245 RMD160 6a4b354ba556fe00aa260da7e6f269de6d894010 SHA1 8046dc67cff191a0779b8d9a297bf30b902a89c8 SHA256 971a537f8e852166fa94a9666b14e2f0a8ee51dcf7a470ab7bcb5be0dba05409
-EBUILD diablo-jdk-1.5.0.07.01.ebuild 4011 RMD160 926d520096a19ff485d25201a0540bfab9118c22 SHA1 b3aaea15b514effeffc6aa0fe478115efdc2af1b SHA256 52a5bfcdf3ff4e56a6dfab9bc2962dfd1748c144e7aa3890a2764826ee9328c3
-EBUILD diablo-jdk-1.6.0.07.02.ebuild 3968 RMD160 179af40b763961e6aa1dabea6eb4f4f5e457614a SHA1 aa297b5ffb9b86ffeb8b3ad0a7a3cfce257a345a SHA256 1efc54cdd4a9888218b10ce7bd50a9878b929303afb0b8158ab54d60f66e3887
-MISC ChangeLog 1747 RMD160 0cf9f1bfd25501995133de012570df18b2f1fab8 SHA1 130713d0f7de0b38c2619d73cb4a7d739e8836a6 SHA256 3d80f680e7d50fc177aac60455b359ae5ab6223ae99f545860b8c5cd512e2495
+EBUILD diablo-jdk-1.6.0.07.02.ebuild 3968 RMD160 5b63dacbaa9a93dbfe21355306ed5afed6a824a6 SHA1 ed7866989a5dec21b18cb5de53708821bba6db5b SHA256 10bb28e2fe0c102ff630334b390e69bbba42296755b8485c5cc7bda430565438
+MISC ChangeLog 1886 RMD160 c8705ecc11ec20485d87ab45e764cf2088b3c35d SHA1 37e9f99a0aa5f54e89c318654cd165f7507eb613 SHA256 1faf0861e0ab49dbe00fbd8605dd7ff9062dddd550a096257284e400bbedc88a
 MISC metadata.xml 291 RMD160 c570e537e8b928defbd6d022001303ce2ef84a7a SHA1 08a03decf6a506afc76730be9b41a6fbb5a989b6 SHA256 e70edd2620f9a7e711b53d0cbe677a7b78268f2e859d9d2567c9c11c13008ceb
