@@ -1,17 +1,0 @@
-# Copyright 1999-2005 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/diablo-jdk/files/diablo-jdk-1.5.env,v 1.2 2008/10/15 13:35:24 aballier Exp $
-
-VERSION="Diablo JDK @PV@"
-JAVA_HOME="@GENTOO_PORTAGE_EPREFIX@/opt/@P@"
-JDK_HOME="@GENTOO_PORTAGE_EPREFIX@/opt/@P@"
-JAVAC=${JAVA_HOME}/bin/javac
-PATH="${JAVA_HOME}/bin:${JAVA_HOME}/jre/bin"
-ROOTPATH="${JAVA_HOME}/bin:${JAVA_HOME}/jre/bin"
-LDPATH="${JAVA_HOME}/jre/lib/@PLATFORM@/:${JAVA_HOME}/jre/lib/@PLATFORM@/native_threads/:${JAVA_HOME}/jre/lib/@PLATFORM@/xawt/:${JAVA_HOME}/jre/lib/@PLATFORM@/server/"
-MANPATH="@GENTOO_PORTAGE_EPREFIX@/opt/@P@/man"
-PROVIDES_TYPE="JDK JRE"
-PROVIDES_VERSION="1.5"
-BOOTCLASSPATH="${JAVA_HOME}/jre/lib/rt.jar:${JAVA_HOME}/jre/lib/i18n.jar:${JAVA_HOME}/jre/lib/sunrsasign.jar:${JAVA_HOME}/jre/lib/jsse.jar:${JAVA_HOME}/jre/lib/jce.jar:${JAVA_HOME}/jre/lib/charsets.jar"
-GENERATION="2"
-ENV_VARS="JAVA_HOME JDK_HOME JAVAC PATH ROOTPATH LDPATH MANPATH"
